# Credit-Approval

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
.dvc/: config
.github/workflows/: CI.yml  CICD.yml
artifacts/my_dataset/pusher/: credit_approval.csv.dvc
src/components/: ingestion.py  train.py  transformation.py  validation.py
src/constants/: __init__.py
src/data_pusher/: data_pusher.py
src/entity/: artifacts_entity.py  config_entity.py  data_schema.py
src/experiments/: __init__.py  experiment.ipynb  transformation_experiment.ipynb
src/logging/: logger.py
src/pipeline/: pipeline.py  prediction_pipeline.py
src/utils/: main_utils.py
templates/: index.html
tests/: test_app.py
