[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagshub>=0.7.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "mlflow>=3.12.0",
    "numpy>=2.4.6",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pandera>=0.31.1",
    "pymongo[srv]>=4.17.0",
    "python-multipart>=0.0.30",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]
